# ChangeLog for sci-chemistry/sparky
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/sparky/ChangeLog,v 1.9 2007/06/06 00:06:09 dberkholz Exp $

*sparky-3.113 (06 Jun 2007)

  06 Jun 2007; Donnie Berkholz <dberkholz@gentoo.org>; +sparky-3.113.ebuild:
  (#164813) Bump. Works with Python 2.4, cleans out Python bytecode on
  uninstallation (Jakub Moc), makes sure python was built with Tk. Keyword
  ~ppc while I'm at it.

  15 Mar 2007; Danny van Dyk <kugelfang@gentoo.org> sparky-3.111.ebuild:
  QA: Removed illegal use of ${ROOT}. Bug #168043

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> sparky-3.111.ebuild:
  Fix SRC_URI. Transition to Manifest2.

  20 Sep 2006; Donnie Berkholz <dberkholz@gentoo.org>; metadata.xml:
  (#148281) Change herd to sci-chemistry from sci.

  05 Aug 2006; Donnie Berkholz <dberkholz@gentoo.org>; metadata.xml:
  Remove myself as maintainer, anyone feel free to work on this, although I'll
  continue to do so as well.

  07 Jul 2006; Donnie Berkholz <dberkholz@gentoo.org>; metadata.xml:
  Update to my new email address.

  18 Dec 2005; Donnie Berkholz <dberkholz@gentoo.org>; sparky-3.111.ebuild:
  Prefer RESTRICT=mirror over nomirror, as portage code does.

  18 Dec 2005; Donnie Berkholz <dberkholz@gentoo.org>; sparky-3.111.ebuild:
  We can't mirror this.

*sparky-3.111 (18 Dec 2005)

  18 Dec 2005; Donnie Berkholz <dberkholz@gentoo.org>;
  +files/fix-install.patch, +metadata.xml, +sparky-3.111.ebuild:
  A new graphical NMR assignment and integration program for proteins, nucleic
  acids, and other polymers. Very strange build system; takes lots of hacking
  and tweaking to get working. Doesn't work with python-2.4, only 2.3.
